Upgrade to Java 17 with modern features
Task 1 - Configuration Updates:
- Update maven.compiler.source/target from 11 to 17
- Update maven-compiler-plugin release from 11 to 17
- Upgrade aspectj-maven-plugin to dev.aspectj:1.14 with aspectjtools 1.9.21
- Add explicit aspectjrt 1.9.21 dependency for Java 17 support
- Exclude Lombok from powertools-metrics to avoid module conflicts
- Add JVM arguments for Java 17 module system in surefire plugin
- Update AWS Lambda runtime from java11 to java17
- Update README.md to reference Java 17

Task 2 - Java 17 Features:
- Convert PaginatedList from class to Java record
- Implement text blocks for JSON error messages in TodoRequestHandler
- Replace Collectors.toList() with Stream.toList() in TodoDynamoDataAccess
- Create sealed class hierarchy for API responses (ApiResponse, SuccessResponse, ErrorResponse)
- Add unit tests for new sealed classes

All changes applied to both sources and cookiecutter templates.

Co-Authored-By: Matthew <matthew.guerra@gradeaccelerator.com>